# shipsy-cache

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DESIGN_DECISIONS.md  INSTRUCTIONS.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  tests.yml
docker/: Dockerfile  docker-compose.yml
examples/: basic_usage.py  logistics_scenarios.py  orders_service_mock.py  stampede_demo.py  visual_demo.py
examples/simulation/: logger.py  main.py  mock_services.py  scenarios.py
shipsy_cache/: __init__.py  cache.py  events.py  exceptions.py  ttl.py
shipsy_cache/backends/: __init__.py  base.py  fake_redis.py
shipsy_cache/l1/: __init__.py  memory_store.py
shipsy_cache/l2/: __init__.py  base.py  memory_stub.py  redis_store.py
tests/: __init__.py  support.py  test_cache_hit_miss.py  test_events.py  test_graceful_degradation.py  test_internal_components.py  test_invalidation.py  test_logistics_patterns.py  test_stampede.py  test_ttl.py
tests/integration/: __init__.py  test_redis_integration.py
