[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shipsy-cache"
version = "1.0.0"
description = "Multi-tier caching library for Shipsy Engineering"
requires-python = ">=3.9"
dependencies = [
    "redis[asyncio]>=4.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["shipsy_cache*"]
